refactor Puzzle1 to Puzzle

--- a/day1/build.gradle
+++ b/day1/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 application {
-    mainClass = 'mobi.riemer.Puzzle1'
+    mainClass = 'mobi.riemer.Puzzle'
 }
 
 description = 'day1'
